# bornal

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
examples/: test_bitcoind_wallet.py
src/bornal/: __init__.py  cli.py  daemon.py  deps.py  fixtures.py  git.py  logger.py  node.py  paths.py  prepare.py  scaffold.py  testing.py
src/bornal/plugins/: bitcoind.py
tests/: conftest.py
tests/functional/: test_cli.py  test_main_module.py
tests/unit/: test_daemon.py  test_deps.py  test_fixtures.py  test_git.py  test_logger.py  test_node.py  test_paths.py  test_plugin.py  test_prepare.py  test_rpc_cli.py  test_testing.py
