[project]
name = "bornal"
version = "0.1.0"
description = "kit for bitcoin related integration test tools"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "pytest>=9.1.1",
]

[project.scripts]
bornal = "bornal:main"

[project.entry-points."bornal.daemons"]
bitcoin-core = "bornal.plugins.bitcoind:CoreCompiler"

[project.entry-points.pytest11]
bornal = "bornal.fixtures"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bornal"]

[dependency-groups]
dev = [
    "poethepoet>=0.30",
    "ruff>=0.8",
    "pre-commit>=3.7",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/bornal"]

[tool.coverage.report]
show_missing = true
fail_under = 90

[tool.poe.tasks.bornal]
help = "Run bornal CLI with virtualenv"
cmd = "python -m bornal"

[tool.poe.tasks.build]
help = "Build wheel into dist/"
cmd = "uv build --wheel"

[tool.poe.tasks.format]
help = "Auto-format the source with ruff"
cmd = "ruff format src"

[tool.poe.tasks.format-check]
help = "Check formatting"
cmd = "ruff format --check src"

[tool.poe.tasks.lint]
help = "Lint the source with ruff"
cmd = "ruff check src"

[tool.poe.tasks.fix]
help = "Lint check for issues with ruff"
cmd = "ruff check --fix src"

[tool.poe.tasks.clean]
help = "Remove build artifacts and caches"
shell = "rm -rf dist build *.egg-info htmlcov .coverage .pytest_cache && find . -type d -name __pycache__ -exec rm -rf {} +"

[tool.poe.tasks.check]
help = "Run lint then format"
sequence = ["lint", "format"]
