[project]
name = "bornal"
version = "0.1.0"
description = "kit for bitcoin related integration test tools"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "pytest>=9.1.1",
]

[project.scripts]
bornal = "bornal:main"

[project.entry-points."bornal.daemons"]
bitcoin-core = "bornal.plugins.bitcoind:CoreCompiler"

[project.entry-points.pytest11]
bornal = "bornal.fixtures"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bornal"]

[dependency-groups]
dev = [
    "poethepoet>=0.30",
    "ruff>=0.8",
    "pytest-cov>5.0",
    "pre-commit>=3.7",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/bornal"]

[tool.coverage.report]
show_missing = true
fail_under = 90

[tool.poe.tasks.bornal]
help = "Run bornal CLI with virtualenv"
cmd = "python -m bornal"

[tool.poe.tasks.hooks]
help = "Install the git pre-commit and commit-msg hooks"
cmd = "pre-commit install --install-hooks"

[tool.poe.tasks.test-verbose]
help = "Run the whole suite verbosely (no coverage)"
cmd = "pytest -v ./tests"

[tool.poe.tasks.test-simple]
help = "Run the whole suite without coverage"
cmd = "pytest ./tests"

[tool.poe.tasks.build]
help = "Build wheel into dist/"
cmd = "uv build --wheel"

[tool.poe.tasks.format]
help = "Auto-format the source with ruff"
cmd = "ruff format src"

[tool.poe.tasks.format-check]
help = "Check formatting"
cmd = "ruff format --check src"

[tool.poe.tasks.lint]
help = "Lint the source with ruff"
cmd = "ruff check src"

[tool.poe.tasks.lint-fix]
help = "Lint check for issues with ruff"
cmd = "ruff check --fix src"

[tool.poe.tasks.lint-check]
help = "Run lint then format"
sequence = ["lint", "format"]

[tool.poe.tasks.test-clean]
help = "Erase coverage data and reports"
shell = "rm -rf htmlcov coverage.xml .coverage"

[tool.poe.tasks.test-unit]
help = "Run unit tests (with coverage data)"
cmd = "coverage run --append -m pytest ./tests/unit"

[tool.poe.tasks.test-functional]
help = "Run functional tests (with coverage data)"
cmd = "coverage run --append -m pytest ./tests/functional"

[tool.poe.tasks.coverage-report]
help = "Report accumulated coverage (gate: fail_under)"
cmd = "coverage report"

[tool.poe.tasks.test-cov]
help = "Full suite behind the coverage gate: clean, unit, functional, report"
sequence = ["test-clean", "test-unit", "test-functional", "coverage-report"]

[tool.poe.tasks.tests]
help = "Alias for `test-cov`"
ref = "test-cov"
